--- a/Servlet_carrito/web/cabecera.html
+++ b/Servlet_carrito/web/cabecera.html
@@ -6,11 +6,11 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Header</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>CABECERA</div>
     </body>
 </html>
