--- a/Servlet_carrito/web/plantillas/pie.html
+++ b/Servlet_carrito/web/plantillas/pie.html
@@ -11,6 +11,6 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
-        <div>CABECERA</div>
+        <div>PIE</div>
     </body>
 </html>
